[package]
name = "tokio-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-bench = { path = "../common-bench" }
tokio = { version = "1.17.0", features = ["net", "rt", "io-util", "macros"] }